[gd_scene load_steps=4 format=3 uid="uid://oeppdx3ye55l"]

[ext_resource type="Script" path="res://Weapons/bullet.gd" id="1_ilxtp"]
[ext_resource type="Texture2D" uid="uid://blp10sn444vgr" path="res://Assets/objects.png" id="2_w4xam"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yn16p"]
size = Vector2(4, 10)

[node name="Bullet" type="Area2D"]
rotation = 1.5708
script = ExtResource("1_ilxtp")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_w4xam")
region_enabled = true
region_rect = Rect2(198, 46, 4, 10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_yn16p")

[node name="QueueFreeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="QueueFreeTimer" to="." method="_on_queue_free_timer_timeout"]
